--- a/src/bisection/bisection_tutorial.ipynb
+++ b/src/bisection/bisection_tutorial.ipynb
@@ -5,13 +5,8 @@
    "metadata": {},
    "source": [
     "# Bisection Method Examples\n",
-    "\n",
-    "This notebook demonstrates the use of the bisection method to find roots of several functions. The following examples are included:\n",
-    "- Example 1: Root of $x - 4$\n",
-    "- Example 2: Root of $x^3 + 8$\n",
-    "- Example 3: Root of $10 \\cdot \\log_{10}(x)$\n",
-    "- Example 4: Root of nonlinear equation involving strain\n",
-    "- Example 5: Root of a power-law equation\n"
+    "This notebook demonstrates multiple examples of the bisection method for root-finding.\n",
+    "Each example explores different types of functions and how to apply the bisection method to find their roots."
    ]
   },
   {
@@ -28,9 +23,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1 - Solving for the root of $x - 4$\n",
-    "\n",
-    "In this example, we are solving for the root of the simple linear equation $x - 4 = 0$. This equation has a root at $x = 4$. We will use the bisection method to find this root, starting with the interval [$a, b$] and iteratively narrowing it down until we converge to the root within a specified threshold.\n"
+    "## Example 1: Root of \( x - 4 \)\n",
+    "In this example, we are solving for the root of the linear equation \( x - 4 = 0 \)."
    ]
   },
   {
@@ -61,16 +55,15 @@
     "        break\n",
     "    \n",
     "    flag = bf.check_sign(fc, fa)\n",
-    "    a, b = bf.reassign_ab(flag, a, b, c)"
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2 - Solving for the root of $x^3 + 8$\n",
-    "\n",
-    "In this example, we are solving for the root of the cubic equation $x^3 + 8 = 0$. This equation has a root at $x = -2$. As with the previous example, we will use the bisection method to find this root within the specified threshold.\n"
+    "## Example 2: Root of \( x^3 + 8 \)\n",
+    "In this example, we solve for the root of \( x^3 + 8 = 0 \), which is a cubic function."
    ]
   },
   {
@@ -100,16 +93,15 @@
     "        break\n",
     "    \n",
     "    flag = bf.check_sign(fc, fa)\n",
-    "    a, b = bf.reassign_ab(flag, a, b, c)"
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 3 - Solving for the root of $10 \\cdot \\log_{10}(x)$\n",
-    "\n",
-    "Here, we solve for the root of the equation $10 \\cdot \\log_{10}(x) = 0$, which corresponds to $x = 1$. This is a logarithmic equation, and the bisection method will help us find the root.\n"
+    "## Example 3: Root of \( 10 \cdot \log_{10}(x) \)\n",
+    "This example solves for the root of \( 10 \cdot \log_{10}(x) = 0 \), a logarithmic function."
    ]
   },
   {
@@ -139,16 +131,15 @@
     "        break\n",
     "    \n",
     "    flag = bf.check_sign(fc, fa)\n",
-    "    a, b = bf.reassign_ab(flag, a, b, c)"
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 4 - Solving for the root of a nonlinear equation involving strain\n",
-    "\n",
-    "In this example, we are solving a more complex nonlinear equation that involves the strain $e$, Young's modulus $E$, and other material properties. The bisection method is applied to find the root of the equation: $\\sigma - E (1 + \\alpha e) e$.\n"
+    "## Example 4: Solving for \( \sigma - E(1 + \alpha e)e \)\n",
+    "This example solves for the root of \( \sigma - E(1 + \alpha e)e = 0 \), a nonlinear equation for material behavior."
    ]
   },
   {
@@ -181,16 +172,15 @@
     "        break\n",
     "    \n",
     "    flag = bf.check_sign(fc, fa)\n",
-    "    a, b = bf.reassign_ab(flag, a, b, c)"
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 5 - Solving for the root of a power-law equation\n",
-    "\n",
-    "In this example, we are solving a power-law equation: $C - P v^n = 0$. The bisection method will help find the value of $v$ that satisfies this equation, where $C$, $P$, and $n$ are constants.\n"
+    "## Example 5: Root of \( C - P v^n \)\n",
+    "In this example, we solve for the root of the equation \( C - P v^n = 0 \), a power law equation."
    ]
   },
   {
@@ -219,16 +209,12 @@
     "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
     "    \n",
     "    if abs(fc) < threshold:\n",
-    "    if abs(fc) < threshold:\n",
     "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
     "        break\n",
     "    \n",
     "    flag = bf.check_sign(fc, fa)\n",
-    "    a, b = bf.reassign_ab(flag, a, b, c)\n",
-    "\n",
-    "print('End of Example 5')"
+    "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
   }
  ]
 }
-
