--- a/src/bisection/bisection_tutorial.ipynb
+++ b/src/bisection/bisection_tutorial.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Bisection Method Examples\n",
-    "This notebook demonstrates multiple examples of the bisection method for root-finding.\n",
-    "Each example explores different types of functions and how to apply the bisection method to find their roots."
+    "This notebook demonstrates the bisection method with multiple examples."
    ]
   },
   {
@@ -23,8 +22,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 1: Root of \( x - 4 \)\n",
-    "In this example, we are solving for the root of the linear equation \( x - 4 = 0 \)."
+    "## Example 1: Root of `x - 4`\n",
+    "This solves for the root of `x - 4 = 0`."
    ]
   },
   {
@@ -33,27 +32,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(x):\n",
-    "    return x - 4\n",
-    "\n",
+    "def f1(x): return x - 4\n",
     "a, b = bf.sort_values(9, -3)\n",
     "threshold = 0.01\n",
     "iteration = 0\n",
-    "\n",
     "while True:\n",
     "    iteration += 1\n",
-    "    if iteration > 200:\n",
-    "        print('Breaking the loop after 200 iterations')\n",
-    "        break\n",
-    "    \n",
+    "    if iteration > 200: break\n",
     "    c = bf.calculate_mean(a, b)\n",
     "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
-    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
-    "    \n",
-    "    if abs(fc) < threshold:\n",
-    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
-    "        break\n",
-    "    \n",
+    "    if abs(fc) < threshold: break\n",
     "    flag = bf.check_sign(fc, fa)\n",
     "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
@@ -62,8 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2: Root of \( x^3 + 8 \)\n",
-    "In this example, we solve for the root of \( x^3 + 8 = 0 \), which is a cubic function."
+    "## Example 2: Root of `x^3 + 8`\n",
+    "This solves for the root of `x^3 + 8 = 0`."
    ]
   },
   {
@@ -72,26 +60,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(x):\n",
-    "    return x**3 + 8\n",
-    "\n",
+    "def f2(x): return x**3 + 8\n",
     "a, b = bf.sort_values(11, -10)\n",
     "iteration = 0\n",
-    "\n",
     "while True:\n",
     "    iteration += 1\n",
-    "    if iteration > 200:\n",
-    "        print('Breaking the loop after 200 iterations')\n",
-    "        break\n",
-    "    \n",
+    "    if iteration > 200: break\n",
     "    c = bf.calculate_mean(a, b)\n",
-    "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
-    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
-    "    \n",
-    "    if abs(fc) < threshold:\n",
-    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
-    "        break\n",
-    "    \n",
+    "    fa, fb, fc = f2(a), f2(b), f2(c)\n",
+    "    if abs(fc) < threshold: break\n",
     "    flag = bf.check_sign(fc, fa)\n",
     "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
@@ -100,8 +77,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 3: Root of \( 10 \cdot \log_{10}(x) \)\n",
-    "This example solves for the root of \( 10 \cdot \log_{10}(x) = 0 \), a logarithmic function."
+    "## Example 3: Root of `10 * log10(x)`\n",
+    "This solves for the root of `10 * log10(x) = 0`."
    ]
   },
   {
@@ -110,26 +87,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(x):\n",
-    "    return 10 * np.log10(x)\n",
-    "\n",
+    "def f3(x): return 10 * np.log10(x)\n",
     "a, b = bf.sort_values(0, 60)\n",
     "iteration = 0\n",
-    "\n",
     "while True:\n",
     "    iteration += 1\n",
-    "    if iteration > 200:\n",
-    "        print('Breaking the loop after 200 iterations')\n",
-    "        break\n",
-    "    \n",
+    "    if iteration > 200: break\n",
     "    c = bf.calculate_mean(a, b)\n",
-    "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
-    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
-    "    \n",
-    "    if abs(fc) < threshold:\n",
-    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
-    "        break\n",
-    "    \n",
+    "    fa, fb, fc = f3(a), f3(b), f3(c)\n",
+    "    if abs(fc) < threshold: break\n",
     "    flag = bf.check_sign(fc, fa)\n",
     "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
@@ -138,8 +104,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 4: Solving for \( \sigma - E(1 + \alpha e)e \)\n",
-    "This example solves for the root of \( \sigma - E(1 + \alpha e)e = 0 \), a nonlinear equation for material behavior."
+    "## Example 4: Nonlinear Equation\n",
+    "This solves for the root of `sigma - E * (1 + alpha * e) * e = 0`."
    ]
   },
   {
@@ -148,29 +114,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(e):\n",
-    "    return sigma - E * (1 + alpha * e) * e\n",
-    "\n",
+    "def f4(e): return sigma - E * (1 + alpha * e) * e\n",
     "E = 2e11\n",
     "alpha = 0.01\n",
     "sigma = 50000\n",
     "a, b = bf.sort_values(7, 0)\n",
     "iteration = 0\n",
-    "\n",
     "while True:\n",
     "    iteration += 1\n",
-    "    if iteration > 200:\n",
-    "        print('Breaking the loop after 200 iterations')\n",
-    "        break\n",
-    "    \n",
+    "    if iteration > 200: break\n",
     "    c = bf.calculate_mean(a, b)\n",
-    "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
-    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
-    "    \n",
-    "    if abs(fc) < threshold:\n",
-    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
-    "        break\n",
-    "    \n",
+    "    fa, fb, fc = f4(a), f4(b), f4(c)\n",
+    "    if abs(fc) < threshold: break\n",
     "    flag = bf.check_sign(fc, fa)\n",
     "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
@@ -179,8 +134,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 5: Root of \( C - P v^n \)\n",
-    "In this example, we solve for the root of the equation \( C - P v^n = 0 \), a power law equation."
+    "## Example 5: Root of `C - P * v^n`\n",
+    "This solves for the root of `C - P * v^n = 0`."
    ]
   },
   {
@@ -189,29 +144,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f1(v):\n",
-    "    return C - P * v**n\n",
-    "\n",
+    "def f5(v): return C - P * v**n\n",
     "P = 50000\n",
     "C = 200000\n",
     "n = 1.4\n",
     "a, b = bf.sort_values(0, 5)\n",
     "iteration = 0\n",
-    "\n",
     "while True:\n",
     "    iteration += 1\n",
-    "    if iteration > 200:\n",
-    "        print('Breaking the loop after 200 iterations')\n",
-    "        break\n",
-    "    \n",
+    "    if iteration > 200: break\n",
     "    c = bf.calculate_mean(a, b)\n",
-    "    fa, fb, fc = f1(a), f1(b), f1(c)\n",
-    "    print(f'a = {a}, b = {b}, c = {c}, f(a) = {fa}, f(b) = {fb}, f(c) = {fc}')\n",
-    "    \n",
-    "    if abs(fc) < threshold:\n",
-    "        print(f'Root found at c = {c} with f(c) = {fc}')\n",
-    "        break\n",
-    "    \n",
+    "    fa, fb, fc = f5(a), f5(b), f5(c)\n",
+    "    if abs(fc) < threshold: break\n",
     "    flag = bf.check_sign(fc, fa)\n",
     "    a, b = bf.reassign_ab(flag, a, b, c)\n"
    ]
