--- a/src/newton/newton_tutorial.ipynb
+++ b/src/newton/newton_tutorial.ipynb
@@ -54,7 +54,7 @@
     "    return x - 4  # f(x) = x - 4\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x1 = nf.newton_method(f1, nf.derivative_of_f1, 3, tolerance=1e-6, max_iter=100)\n",
+    "x1 = nf.newton_method(f1, nf.derivative_of_f, 3, tolerance=1e-6, max_iter=100)\n",
     "print('x1 =', x1)"
    ]
   },
@@ -91,7 +91,7 @@
     "    return x**2 - 100  # f(x) = x^2 - 100\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x2 = nf.newton_method(f2, nf.derivative_of_f2, 5, tolerance=1e-6, max_iter=100)\n",
+    "x2 = nf.newton_method(f2, nf.derivative_of_f, 5, tolerance=1e-6, max_iter=100)\n",
     "print('x2 =', x2)"
    ]
   },
@@ -124,7 +124,7 @@
     "    return np.sin(x)  # f(x) = sin(x)\n",
     "\n",
     "# Apply Newton's Method\n",
-    "x3 = nf.newton_method(f3, nf.derivative_of_f3, 1, tolerance=1e-6, max_iter=100)\n",
+    "x3 = nf.newton_method(f3, nf.derivative_of_f, 1, tolerance=1e-6, max_iter=100)\n",
     "print('x3 =', x3)"
    ]
   },
@@ -166,7 +166,7 @@
     "    return sigma - E * (1 + alpha * e) * e  # Nonlinear buckling equation\n",
     "\n",
     "# Apply Newton's Method\n",
-    "e = nf.newton_method(f4, nf.derivative_of_f4, 0, tolerance=1e-6, max_iter=100)\n",
+    "e = nf.newton_method(f4, nf.derivative_of_f, 0, tolerance=1e-6, max_iter=100)\n",
     "print('e =', e)"
    ]
   },
@@ -208,7 +208,7 @@
     "    return C - P * v**n  # Nonlinear Pressure-Volume equation\n",
     "\n",
     "# Apply Newton's Method\n",
-    "v = nf.newton_method(f5, nf.derivative_of_f5, 1, tolerance=1e-6, max_iter=100)\n",
+    "v = nf.newton_method(f5, nf.derivative_of_f, 1, tolerance=1e-6, max_iter=100)\n",
     "print('v =', v)"
    ]
   }
